# tensorflow

./: build_tflite_android.sh  build_tflite_ios.sh  build_tflite_macos.sh
tensorflow/lite/: CMakeLists.txt
tensorflow/lite/c/: CMakeLists.txt
tensorflow/lite/delegates/gpu/: metal_delegate.h  metal_delegate.mm
tensorflow/lite/delegates/gpu/common/: gpu_info.cc  gpu_info.h
tensorflow/lite/delegates/gpu/metal/: inference_context_generated.h
tensorflow/lite/tools/cmake/: ios.toolchain.cmake
tensorflow/lite/tools/cmake/modules/: Findcoremltools.cmake  coremltools.cmake  flatbuffers.cmake
